Requested changes #2